--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/bootstrap": "^4.3.2",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-bootstrap-typeahead": "^3.4.5",
+    "@types/react-dom": "^16.9.6",
+    "bootstrap-switch-button-react": "^1.2.0",
+    "json-loader": "^0.5.7",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
+    "react-bootstrap-typeahead": "^5.0.0-alpha.1",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "typescript": "^3.8.3",
+    "use-async-effect": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
